Project/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
import java.util.*;

public class Parser implements ParserConstants {

  static final public ASTNode Start() throws ParseException {
  ASTNode t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 0:
      jj_consume_token(0);
           {if (true) return null;}
      break;
    case NIL:
    case MATCH:
    case LET:
    case TYPE:
    case TRUE:
    case FALSE:
    case MINUS:
    case STAR:
    case LPAR:
    case LBRA:
    case NOT:
    case BOX:
    case IF:
    case WHILE:
    case PRINT:
    case PRINTLN:
    case FN:
    case UNIT:
    case String:
    case Label:
    case Id:
    case Num:
      t = Let();
      jj_consume_token(TERM);
                       {if (true) return t;}
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Let() throws ParseException {
  Token n;
  ASTNode e1, body;
  ASTType t1 = null;
  List<Bind> decls = new ArrayList<Bind>();
  List<Bind> types = new ArrayList<Bind>();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TYPE:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      jj_consume_token(TYPE);
      n = jj_consume_token(Id);
      jj_consume_token(EQUAL);
      t1 = Type();
      jj_consume_token(SEMIC);
            types.add(new Bind(n.image, null, t1)); t1 = null;
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LET:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      jj_consume_token(LET);
      n = jj_consume_token(Id);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COLON:
        jj_consume_token(COLON);
        t1 = Type();
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      jj_consume_token(EQUAL);
      e1 = BA();
      jj_consume_token(SEMIC);
            decls.add(new Bind(n.image, e1, t1)); t1 = null;
    }
    body = Seq();
        {if (true) return new ASTLetAndType(decls, types, body);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Seq() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = SeqExp();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMIC:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      op = jj_consume_token(SEMIC);
      t2 = SeqExp();
      t1 = new ASTSeq(t1, t2);
    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode SeqExp() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = BA();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
      op = jj_consume_token(ASSIGN);
      t2 = BA();
      t1 = new ASTSeqExp(t1, t2);
    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode BA() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = BM();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_5;
      }
      op = jj_consume_token(OR);
      t2 = BM();
      t1 = new ASTBExp(t1, op.image, t2);
    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode BM() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = Rel();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_6;
      }
      op = jj_consume_token(AND);
      t2 = Rel();
      t1 = new ASTBExp(t1, op.image, t2);
    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Rel() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = Exp();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQ:
    case GT:
    case LT:
    case GTEQ:
    case LTEQ:
    case DIF:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQ:
        op = jj_consume_token(EQ);
        break;
      case GT:
        op = jj_consume_token(GT);
        break;
      case LT:
        op = jj_consume_token(LT);
        break;
      case GTEQ:
        op = jj_consume_token(GTEQ);
        break;
      case LTEQ:
        op = jj_consume_token(LTEQ);
        break;
      case DIF:
        op = jj_consume_token(DIF);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = Exp();
              t1 = new ASTComp(t1, op.image, t2);
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Exp() throws ParseException {
    ASTNode t1, t2;
    t1 = Term();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        jj_consume_token(PLUS);
        t2 = Term();
                             t1 = new ASTPlus(t1, t2);
        break;
      case MINUS:
        jj_consume_token(MINUS);
        t2 = Term();
                              t1 = new ASTSub(t1, t2);
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
      {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Term() throws ParseException {
    ASTNode t1, t2;
    Token op;
    t1 = FactorWithFields();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CONS:
      jj_consume_token(CONS);
      t2 = FactorWithFields();
                                         t1 = new ASTCons(t1, t2, false);
      break;
    case LAZYCONS:
      jj_consume_token(LAZYCONS);
      t2 = FactorWithFields();
                                             t1 = new ASTCons(t1, t2, true);
      break;
    default:
      jj_la1[14] = jj_gen;
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STAR:
        case DIV:
        case LPAR:
        case UNIT:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_8;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STAR:
          op = jj_consume_token(STAR);
          t2 = FactorWithFields();
                                            t1 = new ASTMult(t1,t2);
          break;
        case DIV:
          op = jj_consume_token(DIV);
          t2 = FactorWithFields();
                                           t1 = new ASTDiv(t1,t2);
          break;
        case UNIT:
          op = jj_consume_token(UNIT);
                      t1 = new ASTApp(t1, new ASTUnit());
          break;
        case LPAR:
          op = jj_consume_token(LPAR);
          t2 = BA();
          jj_consume_token(RPAR);
                                       t1 = new ASTApp(t1, t2);
          break;
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
        {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode FactorWithFields() throws ParseException {
    ASTNode t1;
    Token op;
    t1 = Fact();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOT:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_9;
      }
      jj_consume_token(DOT);
      op = jj_consume_token(Label);
                             t1 = new ASTFieldSelect(t1, op.image);
    }
      {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Fact() throws ParseException {
  Token n, m;
  ASTNode t, e1, e2;
  List<Bind> decls;
  ASTNode  body, alt;
  ASTType at;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Num:
      n = jj_consume_token(Num);
                t = new ASTInt(Integer.parseInt(n.image));
      break;
    case TRUE:
      n = jj_consume_token(TRUE);
                 t = new ASTTrue();
      break;
    case FALSE:
      n = jj_consume_token(FALSE);
                   t = new ASTFalse();
      break;
    case Label:
      n = jj_consume_token(Label);
      jj_consume_token(LPAR);
      e1 = BA();
      jj_consume_token(RPAR);
                                          t = new ASTUnion(n.image, e1);
      break;
    case Id:
      n = jj_consume_token(Id);
               t = new ASTId(n.image);
      break;
    case BOX:
      jj_consume_token(BOX);
      t = Fact();
                        t = new ASTBox(t);
      break;
    case STAR:
      jj_consume_token(STAR);
      t = Fact();
                        t = new ASTStar(t);
      break;
    case String:
      n = jj_consume_token(String);
                   t = new ASTString(n.image.substring(1, n.image.length()-1));
      break;
    case MINUS:
      jj_consume_token(MINUS);
      t = Fact();
                         t = new ASTNeg(t);
      break;
    case NOT:
      jj_consume_token(NOT);
      t = Fact();
                      t = new ASTNot(t);
      break;
    case IF:
      jj_consume_token(IF);
      t = BA();
      jj_consume_token(LBRA);
      e1 = Let();
      jj_consume_token(RBRA);
      jj_consume_token(ELSE);
      jj_consume_token(LBRA);
      e2 = Let();
      jj_consume_token(RBRA);
                                                                         t = new ASTIf(t, e1, e2);
      break;
    case WHILE:
      jj_consume_token(WHILE);
      t = BA();
      jj_consume_token(LBRA);
      body = Let();
      jj_consume_token(RBRA);
                                                t = new ASTWhile(t, body);
      break;
    case FN:
      t = Fun();
      break;
    case PRINT:
      jj_consume_token(PRINT);
      t = Fact();
                         t = new ASTPrint(t);
      break;
    case PRINTLN:
      jj_consume_token(PRINTLN);
      t = Fact();
                           t = new ASTPrintln(t);
      break;
    case LPAR:
      jj_consume_token(LPAR);
      t = Let();
      jj_consume_token(RPAR);
      break;
    case NIL:
      jj_consume_token(NIL);
              t = new ASTNil();
      break;
    case MATCH:
      t = MatchTerm();
      break;
    case LBRA:
      t = RecordTerm();
      break;
    case UNIT:
      jj_consume_token(UNIT);
               t = new ASTUnit();
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Fun() throws ParseException {
Token n;
ASTNode t, e1=null, e2;
ASTType at;
    jj_consume_token(FN);
    n = jj_consume_token(Id);
    jj_consume_token(COLON);
    at = Type();
        t = new ASTFun(n.image, null, at); e1 = t;
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_10;
      }
      jj_consume_token(COMMA);
      n = jj_consume_token(Id);
      jj_consume_token(COLON);
      at = Type();
                                               e2 = new ASTFun(n.image, null, at);
                  ((ASTFun)e1).setBody(e2); e1 = e2;
    }
    jj_consume_token(ARROW);
    jj_consume_token(LBRA);
    e2 = Let();
    jj_consume_token(RBRA);
                                                     ((ASTFun)e1).setBody(e2);
        {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode MatchTerm() throws ParseException {
  Token n, m;
  ASTNode t, e1, e2;
  ArrayList<String> labels;
  ArrayList<String> vars;
  ArrayList<ASTNode> bodies;
    jj_consume_token(MATCH);
    t = Let();
    jj_consume_token(LBRA);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NIL:
      jj_consume_token(NIL);
      jj_consume_token(SARROW);
      e1 = Let();
      jj_consume_token(BAR);
      n = jj_consume_token(Id);
      jj_consume_token(CONS);
      m = jj_consume_token(Id);
      jj_consume_token(SARROW);
      e2 = Let();
      jj_consume_token(RBRA);
          t = new ASTMatch(t, e1, n.image, m.image, e2);
      break;
    case Label:
      n = jj_consume_token(Label);
      jj_consume_token(LPAR);
      m = jj_consume_token(Id);
      jj_consume_token(RPAR);
      jj_consume_token(SARROW);
      e1 = Let();
        labels = new ArrayList<String>();
        vars = new ArrayList<String>();
        bodies = new ArrayList<ASTNode>();
        labels.add(n.image);
        vars.add(m.image);
        bodies.add(e1);
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BAR:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_11;
        }
        jj_consume_token(BAR);
        n = jj_consume_token(Label);
        jj_consume_token(LPAR);
        m = jj_consume_token(Id);
        jj_consume_token(RPAR);
        jj_consume_token(SARROW);
        e2 = Let();
          labels.add(n.image);
          vars.add(m.image);
          bodies.add(e2);
      }
      jj_consume_token(RBRA);
        t = new ASTMatchUnion(t, labels, vars, bodies);
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode RecordTerm() throws ParseException {
    Token lbl;
    ASTNode value;
    HashMap<String, ASTNode> fields = new HashMap<String, ASTNode>();
    ASTNode t;
    jj_consume_token(LBRA);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Label:
      lbl = jj_consume_token(Label);
      jj_consume_token(EQUAL);
      value = BA();
                                             fields.put(lbl.image, value);
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[20] = jj_gen;
          break label_12;
        }
        jj_consume_token(COMMA);
        lbl = jj_consume_token(Label);
        jj_consume_token(EQUAL);
        value = BA();
                                                       fields.put(lbl.image, value);
      }
      break;
    default:
      jj_la1[21] = jj_gen;
      ;
    }
    jj_consume_token(RBRA);
      t = new ASTStruct(fields);
      {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTType Type() throws ParseException {
  ASTType t1, t2;
    t1 = TypeF();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SARROW:
      jj_consume_token(SARROW);
      t2 = Type();
                                         t1 = new ASTTArrow(t1,t2);
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
      {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public TypeBindList LabelList() throws ParseException {
  ASTType t;
  HashMap<String,ASTType> ll;
  Token n;
      ll = new HashMap<String,ASTType>() ;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Label:
      n = jj_consume_token(Label);
      jj_consume_token(COLON);
      t = Type();
                                      ll.put(n.image,t);
      label_13:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[23] = jj_gen;
          break label_13;
        }
        jj_consume_token(COMMA);
        n = jj_consume_token(Label);
        jj_consume_token(COLON);
        t = Type();
                                                       ll.put(n.image,t);
      }
      break;
    default:
      jj_la1[24] = jj_gen;
      ;
    }
      {if (true) return new TypeBindList(ll);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTType TypeF() throws ParseException {
  ASTType t;
  TypeBindList ll;
  Token n;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
                  t = new ASTTInt();
      break;
    case Id:
      n = jj_consume_token(Id);
                   t = new ASTTId(n.image);
      break;
    case BOOL:
      jj_consume_token(BOOL);
                   t = new ASTTBool();
      break;
    case UNIT:
      jj_consume_token(UNIT);
                   t = new ASTTUnit();
      break;
    case STRING:
      jj_consume_token(STRING);
                     t = new ASTTString();
      break;
    case REF:
      jj_consume_token(REF);
      jj_consume_token(LT);
      t = Type();
      jj_consume_token(GT);
                                     t = new ASTTRef(t);
      break;
    case LIST:
      jj_consume_token(LIST);
      jj_consume_token(LT);
      t = Type();
      jj_consume_token(GT);
                                      t = new ASTTList(t);
      break;
    case STRUCT:
      jj_consume_token(STRUCT);
      jj_consume_token(LBRA);
      ll = LabelList();
      jj_consume_token(RBRA);
                                                    t = new ASTTStruct(ll);
      break;
    case UNION:
      jj_consume_token(UNION);
      jj_consume_token(LBRA);
      ll = LabelList();
      jj_consume_token(RBRA);
                                                   t = new ASTTUnion(ll);
      break;
    case LPAR:
      jj_consume_token(LPAR);
      t = Type();
      jj_consume_token(RPAR);
      break;
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public ParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[26];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x15bc901,0x8000,0x4000,0x10000000,0x20000000,0x0,0x0,0x0,0x0,0x0,0xc0000,0xc0000,0x700000,0x700000,0x600,0x8000000,0x15b0900,0x80000000,0x1000,0x100,0x80000000,0x0,0x2000,0x80000000,0x0,0x400000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x3c09ed00,0x0,0x0,0x0,0x0,0x200,0x2,0x1,0xfc,0xfc,0x0,0x0,0x80000,0x80000,0x0,0x0,0x3c09ed00,0x0,0x0,0x8000000,0x0,0x8000000,0x0,0x0,0x8000000,0x13fc0000,};
   }

  /** Constructor with InputStream. */
  public Parser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Parser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 26; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 26; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Parser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 26; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 26; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Parser(ParserTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 26; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 26; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }
